# e-gov

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PORTING.md  README-Arabic.md  README-Chinese.md  README-England.md  README-English.md  README-France.md  README-Germany.md  README-Iran.md  README-Italy.md  README-Korea.md  README-Russia.md  README-Taiwan.md  README-Ukraine.md  README.md
src/: board.rs  chat_commerce.rs  github_viewer.rs  i18n.rs  line_webhook.rs  main.rs  marketing.rs  research.rs
