[package]
name = "e-gov-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e-gov-server"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
pulldown-cmark = "0.12"
once_cell = "1"
